# EasyExplorer

./: .gitignore  README.md  _view.sass  icons.json  index.html  main.js  package-lock.json  package.json  renderer.js  serve.js  settings.html  tempCodeRunnerFile.js  项目结构说明.md
css/: settings.css  styles.css  styles.css.map
docs/: MIGRATION_NOTES.md  PDF预览-Tauri限制说明.md  PDF预览-原生方案.md  PDF预览-最终成功方案.md  PDF预览-简化方案.md  PDF预览使用说明.md  PDF预览修复-最终版.md  PDF预览功能说明.md  PDF预览已修复.md  PDF预览性能优化.md  PDF预览测试指南.md  README-开发指南.md  README_TAURI.md  REMOVED_DEPENDENCIES.md  SCSS编译说明.md  侧边栏和视图样式修复说明.md  侧边栏选项卡已修复.md  修复说明-空格预览和驱动器过滤.md  函数转化完成报告.md  函数迁移清单.md  功能修复和增强说明.md  功能测试指南.md  功能还原说明.md  卷标和网络驱动器修复.md  右键菜单修复说明.md  右键菜单测试指南.md  启动成功.md  启动指南.md  图标视图显示优化.md  完整功能清单.md  工具栏按钮修复说明.md  快速开始-转化版.md  快速开始.md  拖拽和颜色修复说明.md  故障排除.md  文件视图样式已修复.md  文件选择和预览修复.md  日历年报文件夹图标修复.md  时间轴和日历修复说明.md  最近访问功能实现说明.md  (+20 more)
js/: settings.js
modules/: fileSystem.js  ui.js
scss/: _theme.sass  _view.sass  styles.sass
scss/base/: _reset.sass
scss/components/: _resizer.sass
src/: index.html  renderer-tauri.js  settings.html  tauri-adapter.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
src/css/: settings.css  styles copy.css.map  styles.css  styles.css.map
src/js/: settings-tauri.js  settings.js
src/scss/: _theme.sass  _view.sass  styles.sass
src/scss/base/: _base.sass
src/scss/components/: _context-menu.sass  _pathbar.sass  _preview.sass  _recent.sass  _resizer.sass  _sidebar.sass
