[package]
name = "easyexplorer"
version = "1.0.0"
description = "项目资源管理器，高效做项目"
authors = ["wonvy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "dialog-all", "path-all", "shell-execute", "shell-open", "shell-sidecar", "fs-all", "clipboard-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
windows = { version = "0.56", features = [
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_FileSystem"
] }
image = "0.25"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

